# moneytrak

./: .dockerignore  .env  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  bpi_2212233828_20241225.xlsx  docker-compose.yml  fly.toml  pom.xml  pyproject.toml  transactions.db
.claude/commands/: review.md  speckit.analyze.md
.github/workflows/: ci.yml
.specify/memory/: constitution.md
.specify/templates/: constitution-checklist.md  plan-template.md  spec-template.md
app/: __init__.py  app.py
app/dependencies/: transactions_deps.py
app/handlers/: __init__.py  bank_bpi_handler.py  bank_cgd_handler.py  file_handler.py  file_handler_factory.py
app/models/: transaction.py
app/persistence/: __init__.py  db_client.py  sqlite_db_client.py  transactions_storage.py
app/routers/: __init__.py  transactions.py  transactions_router.py
app/services/: __init__.py  transaction_service.py  transactions_service.py
db/: schema.sql
db/migrations/: 20250323130015_create_transactions_table.sql
handlers/: file_handler.py  file_handler_factory.py
handlers/banks/: __init__.py  bank_bpi_handler.py  bank_cgd_handler.py  bank_revolut_handler.py
models/: transaction.py
specs/001-expense-tracking/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-transaction-categories/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-simple-auth/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-portfolio-readings/: spec.md  (+1 more)
tests/: __init__.py  test_bank_bpi_handler.py
(+120 files in other folders)
