[project]
name = "moneytrak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "et-xmlfile==2.0.0",
    "fastapi[standard]>=0.115.11",
    "numpy==2.0.2",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "six==1.17.0",
    "tzdata==2025.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
lint = ["ruff>=0.11.0"]
