[project]
name = "moneytrak"
version = "0.1.0"
description = "A simple money tracker"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiosqlite>=0.21.0",
    "et-xmlfile==2.0.0",
    "fastapi[standard]>=0.115.11",
    "numpy==2.0.2",
    "openpyxl==3.1.5",
    "pandas==2.2.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "six==1.17.0",
    "tzdata==2025.1",
]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-pythonpath>=0.7.3"]
lint = ["ruff>=0.11.0"]

[tool.pytest.ini_options]
pythonpath = ["."]
